microservicios-unidos/k8s/04-auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authservice
  namespace: microservicios
  labels:
    app: authservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authservice
  template:
    metadata:
      labels:
        app: authservice
    spec:
      containers:
      - name: authservice
        image: authservice:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: authservice-svc
  namespace: microservicios
spec:
  selector:
    app: authservice
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
