microservicios-unidos/k8s/05-publicaciones-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: publicaciones-service
  namespace: microservicios
  labels:
    app: publicaciones-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: publicaciones-service
  template:
    metadata:
      labels:
        app: publicaciones-service
    spec:
      containers:
      - name: publicaciones-service
        image: ms-publicaciones:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: publicaciones-svc
  namespace: microservicios
spec:
  selector:
    app: publicaciones-service
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
