microservicios-unidos/k8s/06-notificaciones-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notificaciones-service
  namespace: microservicios
  labels:
    app: notificaciones-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notificaciones-service
  template:
    metadata:
      labels:
        app: notificaciones-service
    spec:
      containers:
      - name: notificaciones-service
        image: ms-notificaciones:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8086
---
apiVersion: v1
kind: Service
metadata:
  name: notificaciones-svc
  namespace: microservicios
spec:
  selector:
    app: notificaciones-service
  ports:
  - port: 8086
    targetPort: 8086
  type: ClusterIP
