microservicios-unidos/k8s/07-catalogo-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalogo-service
  namespace: microservicios
  labels:
    app: catalogo-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalogo-service
  template:
    metadata:
      labels:
        app: catalogo-service
    spec:
      containers:
      - name: catalogo-service
        image: ms-catalogo:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8087
---
apiVersion: v1
kind: Service
metadata:
  name: catalogo-svc
  namespace: microservicios
spec:
  selector:
    app: catalogo-service
  ports:
  - port: 8087
    targetPort: 8087
  type: ClusterIP
